# ipc

./: CMakeLists.txt  README.md  getopt.c  ipc.c
.github/workflows/: release.yml
include/: getopt.h
include/core/: adapter_info.h  adapter_utils.h
include/display/: color_output.h  display.h
include/utils/: commands.h  getopt.h  ip_calculator.h  ipconfig_commands.h  net_utils.h  string_utils.h
src/: main.c
src/core/: adapter_info.c  adapter_utils.c
src/display/: color_output.c  display.c
src/utils/: commands.c  getopt.c  ip_calculator.c  ipconfig_commands.c  net_utils.c  string_utils.c
